--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             <button class="start"><i class="fas fa-play"></i></button>
             <button class="pause"><i class="fas fa-pause"></i></button>
             <button class="stop"><i class="fas fa-stop"></i></button>
-            <button class="reset"><i class="fas fa-times"></i></button>
+            <button class="reset"><i class="fas fa-times"></i></button>            
+        </div>
+            <div class="buttons">
             <button class="history">Archive</button>
         </div>
-
         <ul class="time-list">
 
         </ul>
